language/move-lang/tests/move_check/parser/phantom_param_invalid_keyword.move
module M {
    struct S<T1, phatom T2> {
        a: T1
    }
}
